--- a/noble/debian/changelog
+++ b/noble/debian/changelog
@@ -1,3 +1,9 @@
+gz-tools2 (2.0.0-2~noble) noble; urgency=medium
+
+  * gz-tools2 2.0.0-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Tue, 26 Mar 2024 18:59:11 +0100
+
 gz-tools2 (2.0.0-1~noble) noble; urgency=medium
 
   * First release for noble
