--- a/jammy/debian/changelog
+++ b/jammy/debian/changelog
@@ -1,3 +1,9 @@
+gz-tools2 (2.0.1-1~jammy) jammy; urgency=medium
+
+  * gz-tools2 2.0.1-1 release
+
+ -- Addisu Z. Taddese <addisu@openrobotics.org>  Thu, 28 Mar 2024 16:50:57 -0500
+
 gz-tools2 (2.0.0-1~jammy) jammy; urgency=medium
 
   * gz-tools2 2.0.0-1 release
