--- a/noble/debian/changelog
+++ b/noble/debian/changelog
@@ -1,3 +1,9 @@
+gz-tools2 (2.0.1-1~noble) noble; urgency=medium
+
+  * gz-tools2 2.0.1-1 release
+
+ -- Addisu Z. Taddese <addisu@openrobotics.org>  Thu, 28 Mar 2024 16:50:58 -0500
+
 gz-tools2 (2.0.0-1~noble) noble; urgency=medium
 
   * First release for noble
