--- a/jammy/debian/changelog
+++ b/jammy/debian/changelog
@@ -1,3 +1,9 @@
+gz-tools2 (2.0.2-1~jammy) jammy; urgency=medium
+
+  * gz-tools2 2.0.2-1 release
+
+ -- Addisu Z. Taddese <addisu@openrobotics.org>  Tue, 04 Feb 2025 17:03:34 -0600
+
 gz-tools2 (2.0.1-2~jammy) jammy; urgency=medium
 
   * gz-tools2 2.0.1-2 release
