--- a/focal/debian/changelog
+++ b/focal/debian/changelog
@@ -1,3 +1,9 @@
+gz-tools2 (2.0.3-1~focal) focal; urgency=medium
+
+  * gz-tools2 2.0.3-1 release
+
+ -- Carlos Aguero <caguero@osrfoundation.org>  Mon, 25 Aug 2025 18:43:44 +0200
+
 gz-tools2 (2.0.2-1~focal) focal; urgency=medium
 
   * gz-tools2 2.0.2-1 release
